Use LODRange for Mesh LOD